# ImageRestoration_CNN

./: .gitignore  IR_dataset.py  README.md  eval.py  model_nir4.py  models.py  models_nir10.py  models_nir2.py  models_nir5.py  models_nir6.py  models_nir7.py  models_nir8.py  models_nir9.py  prepare.bat  prepare.py  prune.py  test.py  train.bat  train.py  train_irgan.py  train_nir.py  utils.py
IR-MNN/: .gitignore  CMakeLists.txt  README.md  test.cpp
IR-MNN/backup/: readme.txt  test.cpp
IR-MNN/model/: best-resnet_305-q.mnn  best-resnet_305.mnn
IR-MNN/quantize/: make_q_pic.py  pretreatConfig.json
IR-MNN/vs-sln/: mnn-test.sln  mnn-test.vcxproj  mnn-test.vcxproj.filters
doc/: mnn.txt
scripts/: IR_video.py  make_jpg_q10.py  merge_image.py  prepare2.py  prepare3.py  test.py  to_onnx.py  video_2_jpg.py
weights/: best-0128.pth  best-enc_228.pth  best-readme.txt  best-resnet_107.pth  best-resnet_137.pth  best-resnet_305.onnx  best-resnet_305.pth
